添加路径前缀，去掉反斜杠

--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,7 @@
                     <img data-src="../img/2/p1-2_07.png" alt="1" class="swiper-lazy float hidden animated  lightSpeedInLeft delay1200" style="top:6.01rem;">
                     <img data-src="../img/2/p1-2_08.png" alt="1" class="swiper-lazy float hidden animated  lightSpeedIn delay1200" style="top:6.61rem;">
                     <img data-src="../img/2/p1-2_09.png" alt="1" class="swiper-lazy float hidden animated  lightSpeedInLeft delay1500" style="top:7.29rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -58,7 +58,7 @@
                     <img data-src="../img/logo2.png" class="swiper-lazy logo" alt="">
                     <img data-src="../img/3/pp3_02.png" alt="1" class="swiper-lazy float" style="top:4.32rem;">
                     <img data-src="../img/3/pp3down_02.png" alt="1" class="swiper-lazy float hidden animated middle upper" style="top:4.32rem;">
-                    <img data-src="../img/footer2.png" alt="1" class="footer">
+                    <img data-src="../img/footer2.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -69,7 +69,7 @@
                     <img data-src="../img/4/pp4_02.png" alt="1" class="swiper-lazy float hidden animated middle upper" style="top:3.4rem;">
                     <img data-src="../img/4/pp4d_02.png" alt="1" class="swiper-lazy float" style="top:7.25rem;">
                     <img data-src="../img/4/pp4dfull_02.png" alt="1" class="swiper-lazy float   hidden animated middle upper delay" style="top:7.25rem;">
-                    <img data-src="../img/footer2.png" alt="1" class="footer">
+                    <img data-src="../img/footer2.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -84,7 +84,7 @@
                     <img data-src="../img/5/p4-5_07.png" alt="1" class="swiper-lazy float hidden animated  lightSpeedInLeft delay1200" style="top:6.06rem;">
                     <img data-src="../img/5/p4-5_08.png" alt="1" class="swiper-lazy float hidden animated  lightSpeedIn delay1500" style="top:6.92rem;">
                     <img data-src="../img/5/p4-5_09.png" alt="1" class="swiper-lazy float hidden animated  lightSpeedInLeft delay1500" style="top:7.7rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -93,7 +93,7 @@
                     <img data-src="../img/logo2.png" class="swiper-lazy logo" alt="">
                     <img data-src="../img/6/pp6_02.png" alt="1" class="swiper-lazy float hidden animated  upper" style="top:3.64rem;">
                     <img data-src="../img/6/pp6up_02.png" alt="1" class="swiper-lazy float hidden animated  upper delay600" style="top:6.72rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -101,7 +101,7 @@
                     <img data-src="../img/8/pp8_02.jpg" class="swiper-lazy background">
                     <img data-src="../img/logo2.png" class="swiper-lazy logo" alt="">
                     <img data-src="../img/8/pp8_02.png" alt="1" class="swiper-lazy float hidden animated  righter" style="top:3.5rem;left:1.42rem;width:4.98rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -109,7 +109,7 @@
                     <img data-src="../img/7/pp7_02.jpg" class="swiper-lazy background">
                     <img data-src="../img/logo2.png" class="swiper-lazy logo" alt="">
                     <img data-src="../img/7/pp7_02.png" alt="1" class="swiper-lazy float hidden animated  downer" style="top:6.34rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -119,7 +119,7 @@
                     <div class="swiper-lazy float" style="top:2.43rem;overflow-x:scroll;">
                         <img data-src="../img/9/x.png" alt="1" style="top:2.43rem;width:1280px;" class="swiper-lazy">
                     </div>
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -135,7 +135,7 @@
                     <img data-src="../img/rr/p9-26.png" class="swiper-lazy float hidden fadein delay2200" alt="" style="top:3.49rem">
                     <img data-src="../img/rr/p9-27.png" class="swiper-lazy float hidden fadein delay2400" alt="" style="top:3.49rem">
                     <img data-src="../img/rr/rr1_03.png" class="swiper-lazy float hidden animated zoomInUp" alt="" style="top:5.27rem;left:2.83rem;width:0.74rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -151,7 +151,7 @@
                     <img data-src="../img/r/p96.png" class="swiper-lazy float hidden fadein delay2200" alt="" style="top:3.49rem">
                     <img data-src="../img/r/p98.png" class="swiper-lazy float hidden fadein delay2400" alt="" style="top:3.49rem">
                     <img data-src="../img/r/p9-10_03.png" class="swiper-lazy float hidden animated zoomInUp" alt="" style="top:5.59rem;left:2.6rem;width:1.25rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -167,7 +167,7 @@
                     <img data-src="../img/11/p11_08.png" alt="1" class="swiper-lazy float hidden animated  lightSpeedIn delay1500" style="top:6.07rem;">
                     <img data-src="../img/11/p11_09.png" alt="1" class="swiper-lazy float hidden animated  lightSpeedInLeft delay1500" style="top:6.72rem;">
                     <img data-src="../img/11/p11_10.png" alt="1" class="swiper-lazy float hidden animated  lightSpeedInLeft delay1500" style="top:7.38rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -175,7 +175,7 @@
                     <img data-src="../img/12/p12_02.jpg" class="swiper-lazy background">
                     <img data-src="../img/logo2.png" class="swiper-lazy logo" alt="">
                     <img data-src="../img/12/p12_03.png" class="swiper-lazy float hidden animated  righter" style="left:1.87rem;width:4.53rem;top:3.69rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -184,7 +184,7 @@
                     <img data-src="../img/logo2.png" class="swiper-lazy logo" alt="">
                     <img data-src="../img/13/p13_02.png" class="swiper-lazy float hidden animated  upper" style="top:3.95rem;">
                     <img data-src="../img/13/p14_02.png" class="swiper-lazy float hidden animated  upper" style="top:6.75rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -192,7 +192,7 @@
                     <img data-src="../img/14/p14_02.jpg" class="swiper-lazy background">
                     <img data-src="../img/logo2.png" class="swiper-lazy logo" alt="">
                     <img data-src="../img/14/pl_02.png" alt="1" class="swiper-lazy float hidden animated  rubberBand" style="top:3.97rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -200,7 +200,7 @@
                     <img data-src="../img/15/p15_02.jpg" class="swiper-lazy background">
                     <img data-src="../img/logo2.png" class="swiper-lazy logo" alt="">
                     <img data-src="../img/15/pux_02.png" alt="1" class="swiper-lazy float hidden animated  jello" style="top:3.97rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -210,7 +210,7 @@
                     <img data-src="../img/26/p26_03.png" class="swiper-lazy float hidden bigger" style="left:0.27rem;width:1.19rem;top:3.43rem;">
                     <img data-src="../img/26/p26_05.png" class="swiper-lazy float hidden bigger" style="left:2.76rem;width:0.91rem;top:3.43rem;">
                     <img data-src="../img/26/p26_07.png" class="swiper-lazy float hidden bigger" style="left:4.38rem;width:1.74rem;top:3.43rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -218,7 +218,7 @@
                     <img data-src="../img/16/p16_02.jpg" class="swiper-lazy background">
                     <img data-src="../img/logo2.png" class="swiper-lazy logo" alt="">
                     <img data-src="../img/16/p16_03.png" class="swiper-lazy float hidden animated  righter" style="left:1.05rem;width:5.35rem;top:3.55rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -226,7 +226,7 @@
                     <img data-src="../img/17/p17_02.jpg" class="swiper-lazy background">
                     <img data-src="../img/logo2.png" class="swiper-lazy logo" alt="">
                     <img data-src="../img/17/p17_03.png" class="swiper-lazy float hidden animated  righter" style="left:1.05rem;width:5.35rem;top:3.67rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -234,7 +234,7 @@
                     <img data-src="../img/l/pl_02.jpg" class="swiper-lazy background">
                     <img data-src="../img/logo2.png" class="swiper-lazy logo" alt="">
                     <img data-src="../img/l/pl_02.png" class="swiper-lazy float hidden animated  upper" style="top:4.2rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -250,7 +250,7 @@
                     <img data-src="../img/19/p19_08.png" alt="1" class="swiper-lazy float hidden animated  lightSpeedIn delay1500" style="top:6.20rem;">
                     <img data-src="../img/19/p19_09.png" alt="1" class="swiper-lazy float hidden animated  lightSpeedInLeft delay1500" style="top:6.78rem;">
                     <img data-src="../img/19/p19_10.png" alt="1" class="swiper-lazy float hidden animated  lightSpeedInLeft delay1500" style="top:7.43rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -276,7 +276,7 @@
                     <img data-src="../img/20/label17.png" alt="1" class="swiper-lazy float hidden animated lball8" style="top:7.89rem;left:3.84rem;width:0.98rem;">
                     <img data-src="../img/20/label18.png" alt="1" class="swiper-lazy float hidden animated lball32" style="top:7.72rem;left:5.31rem;width:0.96rem;">
                     <img data-src="../img/20/label18.png" alt="1" class="swiper-lazy float hidden animated lball6" style="top:6.83rem;left:4.56rem;width:0.99rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -304,7 +304,7 @@
                     <img data-src="../img/21/19.png" alt="1" class="swiper-lazy float hidden animated lball8" style="top:7.87rem;left:0.46rem;width:1rem;">
                     <img data-src="../img/21/20.png" alt="1" class="swiper-lazy float hidden animated lball4" style="top:7.74rem;left:2.19rem;width:1.02rem;">
                     <img data-src="../img/21/21.png" alt="1" class="swiper-lazy float hidden animated lball32" style="top:7.87rem;left:3.84rem;width:0.99rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -330,7 +330,7 @@
                     <img data-src="../img/22/17.png" class="swiper-lazy float hidden lball36" alt="" style="top:7.73rem;left:0.66rem;width:0.96rem;">
                     <img data-src="../img/22/18.png" class="swiper-lazy float hidden lball4" alt="" style="top:7.8rem;left:2.38rem;width:0.81rem;">
                     <img data-src="../img/22/18.png" class="swiper-lazy float hidden lball8" alt="" style="top:8.03rem;left:3.71rem;width:0.99rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -339,7 +339,7 @@
                     <img data-src="../img/23/2.png" class="swiper-lazy float" style="top:3.36rem;">
                     <img data-src="../img/23/r.png" class="swiper-lazy float hidden fadein" style="top:3.36rem;">
                     <img data-src="../img/logo2.png" class="swiper-lazy logo" alt="">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -347,7 +347,7 @@
                     <img data-src="../img/24/p24_02.jpg" class="swiper-lazy background">
                     <img data-src="../img/logo2.png" class="swiper-lazy logo" alt="">
                     <img data-src="../img/24/p24_03.png" class="swiper-lazy float hidden bigger" style="left:2.32rem;width:1.81rem;top:4.56rem;">
-                    <img data-src="../img/footer.png" alt="1" class="footer">
+                    <img data-src="../img/footer.png" alt="1" class="swiper-lazy footer">
                 </div>
             </div>
             <div class="swiper-slide">
